WIP Tabs, Fix toolbar z-index issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4397,6 +4397,45 @@ h6 {
   background-color: #6863ce;
 }
 
+.tabs__content {
+  position: relative;
+  overflow: hidden;
+  transition: height 0.6s ease-in-out;
+}
+
+.tabs__content__item {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  opacity: 0;
+}
+
+.tabs__content__item:not(.tabs__content__item--active):not(.tabs__content__item--hiding):first-child,
+.tabs__content__item:not(.tabs__content__item--active) ~ .tabs__content__item:not(.tabs__content__item--active):not(.tabs__content__item--hiding) {
+  left: -100%;
+}
+
+.tabs__content__item--active {
+  left: 0;
+  opacity: 1;
+  transition: 0.6s ease-in-out;
+}
+
+.tabs__content__item--active:not(.tabs__content__item--hiding) ~ .tabs__content__item {
+  left: 100% !important;
+}
+
+.tabs__content__item--hiding {
+  left: -100%;
+  opacity: 0 !important;
+  transition: 0.6s ease-in-out;
+}
+
+.tabs__content__item--active ~ .tabs__content__item--hiding {
+  left: 100%;
+}
+
 .stats-info--col {
   margin-top: 12px;
   margin-bottom: 26px;
@@ -4536,7 +4575,7 @@ h6 {
   top: 0;
   right: 0;
   left: 300px;
-  z-index: 9999;
+  z-index: 10000;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
