--- a/resources/assets/sass/styles/toolbar.scss
+++ b/resources/assets/sass/styles/toolbar.scss
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   left: $sidebar--width;
-  z-index: 9999;
+  z-index: 10000;
   display: flex;
   justify-content: space-between;
   align-items: center;
